--- a/package.json
+++ b/package.json
@@ -25,6 +25,6 @@
     "nprogress": "^0.2.0"
   },
   "peerDependencies": {
-    "@inertiajs/inertia": "^0.6.0 || ^0.7.0"
+    "@inertiajs/inertia": "^0.6.0 || ^0.7.0 || ^0.8.0"
   }
 }
